--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ main {
     font-weight: 400;
     padding: 1.5em 0.75em;
     border-radius: 8px;
-    max-width: 300px;
+    width: 300px;
 }
 
 .change-button {
