--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ main {
     border-radius: 50%;
     background-color: #79db75;
     cursor: pointer;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.05em;
     border: 1px solid white;
     margin-top: 2em;
     text-transform: uppercase;
@@ -45,6 +45,20 @@ main {
     font-size: 1rem;
 }
 
+.clear-button {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background-color: red;
+    cursor: pointer;
+    letter-spacing: 0.05em;
+    border: 1px solid white;
+    margin-top: 2em;
+    text-transform: uppercase;
+    font-weight: 800;
+    color: white;
+    font-size: 1rem;
+}
 .author-text {
     text-transform: uppercase;
     font-size: 0.7rem;
